--- a/Assignment_2/package.json
+++ b/Assignment_2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week1_harsha_patel",
+  "name": "assignement_3",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.8",
+    "@types/node": "^20.12.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
